# hpgl-viewer

./: .gitignore  CLAUDE.md  README.md  build.sh  meson.build  todo.md
.github/workflows/: ci.yml
data/: hpgl-viewer.desktop  hpgl.xml  mimeapps.list
memory/: MEMORY.md  feedback_commits.md  feedback_tests.md
src/: config.cpp  config.h  export_png.cpp  export_png.h  hpgl_fix.cpp  hpgl_fix.h  hpgl_parser.cpp  hpgl_parser.h  main.cpp  renderer.cpp  renderer.h  view_state.cpp  view_state.h
subprojects/: imgui.wrap
subprojects/packagefiles/imgui/: meson.build
tests/: test_config.cpp  test_export_png.cpp  test_harness.h  test_hpgl_fix.cpp  test_hpgl_parser.cpp  test_renderer.cpp  test_view_state.cpp
tests/data/: c100_engine_665bacfa_hpdm_sx_a1__7bb8d6db_260309_103643_1.hpgl  composition100_manual_14d5a114_mutoh_xp500_a1__b2601bb5_260214_102422_0.hpgl
